# bb-agent

./: .gitignore  .npmignore  AUDIT.md  BLUEPRINT.md  CHANGELOG.md  CONTRIBUTING.md  CRITICAL-PORT-PLAN.md  Cargo.toml  FULLSCREEN-TUI-GAPS.md  FULLSCREEN-TUI-PLAN.md  LICENSE  LICENSE-APACHE  PLAN.md  PORT-MAP.md  README.md  RECONSTRUCTION.md  RESTRUCTURE.md  REVIEW.md  ROLLING-MERGE-QUEUE.md  SECURITY.md  TASK.md  TASKS.md  TUI-PLAN.md  bb-dev  package.json  rust-toolchain.toml
crates/bb-monitor/: Cargo.toml
crates/bb-monitor/src/: cache_metrics.rs  context.rs  formatting.rs  lib.rs  session.rs  usage.rs
crates/bb-monitor/src/request_metrics/: canonical.rs  divergence.rs  mod.rs  sink.rs  tracker.rs
crates/cli/: Cargo.toml
crates/cli/src/: agent_loop.rs  agents_md.rs  cache_metrics.rs  compaction_exec.rs  error.rs  extensions.rs  fullscreen_entry.rs  input_files.rs  interactive.rs  interactive_commands.rs  interactive_events.rs  login.rs  main.rs  models.rs  run.rs  session.rs  session_bootstrap.rs  session_info.rs  session_navigation.rs  setup.rs  slash.rs  tool_registry.rs  turn_runner.rs  update_check.rs
crates/cli/src/extensions/: command_results.rs  discovery.rs  packages.rs  plugin_runtime.rs  runtime_support.rs  tests.rs  ui.rs
crates/cli/src/fullscreen/: controller.rs  formatting.rs  menus.rs  mod.rs  session.rs  turns.rs
crates/cli/src/interactive/: api.rs  auth_selector_overlay.rs  controller.rs  mod.rs  model_selector_overlay.rs  session_selector_overlay.rs  settings_overlay.rs  state.rs  status_loader.rs  tree_selector_overlay.rs  types.rs
crates/cli/src/interactive_commands/: controller.rs  mod.rs  types.rs
crates/cli/src/interactive_events/: helpers.rs  mod.rs  render_state.rs  types.rs
crates/cli/src/interactive_fullscreen/: mod.rs  mode.rs  state.rs
crates/cli/src/login/: cli.rs  providers.rs  store.rs
crates/cli/src/oauth/: anthropic.rs  callback_server.rs  github_copilot.rs  mod.rs  openai_codex.rs  pkce.rs
crates/cli/src/tui/: controller.rs  formatting.rs  menus.rs  mod.rs  session.rs  turns.rs
crates/cli/src/turn_runner/: hooks.rs  panic.rs  persistence.rs  runner.rs  tests.rs  tools.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  agent_loop.rs  agent_session.rs  agent_session_extensions.rs  agent_session_runtime.rs  config.rs  error.rs  lib.rs  session.rs  settings.rs  settings_defaults.rs  settings_packages.rs  tool_names.rs  tool_names_tests.rs  types.rs
crates/core/src/agent/: abort.rs  callbacks.rs  data.rs  events.rs  helpers.rs  mod.rs  queue.rs  runtime.rs  state.rs
crates/core/src/agent_loop/: compat.rs  mod.rs  runner.rs  streaming.rs  tests.rs  tool_execution.rs  types.rs
crates/core/src/agent_session/: agents_md.rs  config.rs  error.rs  events.rs  messages.rs  mod.rs  model_arg.rs  models.rs  orchestration.rs  print.rs  provider.rs  provider_tests.rs  runtime.rs  session.rs  state.rs  transcript_validation.rs
crates/core/src/agent_session_extensions/: mod.rs  models.rs  resources.rs  runner.rs  types.rs
crates/core/src/agent_session_runtime/: algorithms.rs  host.rs  mod.rs  runtime.rs  session_tree.rs  types.rs
crates/core/src/settings/: io.rs  merge.rs  tests.rs
crates/core/src/types/: content.rs  messages.rs  mod.rs  session.rs
crates/hooks/: Cargo.toml
crates/hooks/src/: bus.rs  error.rs  events.rs  lib.rs
crates/plugin-host/: Cargo.toml
crates/plugin-host/js/: host.js
crates/plugin-host/src/: discovery.rs  error.rs  host.rs  lib.rs  protocol.rs
crates/plugin-host/src/host/: host_impl.rs  lifecycle.rs  messaging.rs  mod.rs  tests.rs  types.rs
crates/provider/: Cargo.toml
crates/provider/src/: anthropic.rs  error.rs  google.rs  lib.rs  openai.rs  registry.rs  resolver.rs  retry.rs  streaming.rs  traits.rs  transforms.rs  types.rs
crates/provider/src/anthropic/: events.rs
crates/provider/src/google/: convert.rs  events.rs  tests.rs
crates/provider/src/openai/: codex.rs  responses.rs  sse.rs
crates/provider/src/registry/: lookup.rs  mod.rs  models.rs  types.rs
crates/provider/src/transforms/: tests.rs
crates/session/: Cargo.toml
crates/session/src/: branch_summary.rs  compaction.rs  context.rs  error.rs  import_export.rs  lib.rs  schema.rs  store.rs  tree.rs
crates/session/src/compaction/: file_ops.rs  mod.rs  planning.rs  serialize.rs  summarize.rs  tests.rs  types.rs
crates/session/src/context/: assembly.rs  formatting.rs  tests.rs
crates/session/src/import_export/: export.rs  import.rs
crates/session/src/store/: fork.rs  queries.rs  tests.rs  writes.rs
crates/tools/: Cargo.toml
crates/tools/src/: artifacts.rs  bash.rs  bash_policy.rs  browser_fetch.rs  diff.rs  edit.rs  error.rs  find.rs  grep.rs  lib.rs  ls.rs  path.rs  read.rs  registry.rs  scheduler.rs  support.rs  text.rs  types.rs  web.rs  web_fetch.rs  web_search.rs  write.rs
crates/tools/src/bash/: output.rs  process.rs  safety.rs
crates/tools/src/browser_fetch/: browser.rs  content.rs  tests.rs
crates/tools/src/edit/: tests.rs
crates/tools/src/read/: image.rs  tests.rs  text.rs
crates/tools/src/sandbox/: linux.rs  mod.rs
crates/tools/src/web_fetch/: html.rs  output.rs
crates/tools/src/web_search/: cache.rs  ddg.rs  input.rs  tests.rs
crates/tools/src/write/: tests.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  chat.rs  component.rs  editor.rs  error.rs  footer.rs  footer_data.rs  fuzzy.rs  kill_ring.rs  lib.rs  markdown.rs  model_selector.rs  renderer.rs  select_list.rs  session_selector.rs  slash_commands.rs  status.rs  syntax.rs  terminal.rs  theme.rs  tool_preview.rs  tree_selector.rs  tui_core.rs  ui_hints.rs  undo_stack.rs  utils.rs
crates/tui/src/components/: border.rs  box_component.rs  loader.rs  mod.rs  spacer.rs  text.rs  truncated_text.rs
crates/tui/src/editor/: editing.rs  history.rs  input.rs  key_dispatch.rs  menus.rs  mod.rs  navigation.rs  rendering.rs  selection.rs  tests.rs  types.rs
crates/tui/src/fullscreen/: events.rs  frame.rs  input.rs  layout.rs  menus.rs  mod.rs  navigation.rs  projection.rs  renderer.rs  runtime.rs  scheduler.rs  search.rs  (+9 more)
(+253 files in other folders)
