[package]
name = "bb-monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

description = "Shared monitoring, usage, and cache-metrics helpers for BB-Agent backends"

[dependencies]
bb-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true

[dev-dependencies]
chrono.workspace = true
