[package]
name = "bb-monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

description = "Shared monitoring, usage, and cache-metrics helpers for BB-Agent backends"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
