[package]
name = "bb-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bb"
path = "src/main.rs"

[dependencies]
bb-core.workspace = true
bb-session.workspace = true
bb-tools.workspace = true
bb-provider.workspace = true
bb-hooks.workspace = true
bb-plugin-host.workspace = true
bb-tui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
async-trait = "0.1"
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
chrono.workspace = true
rusqlite.workspace = true
tokio-util.workspace = true
crossterm = "0.28"
url = "2"
sha2 = { workspace = true }
rand.workspace = true
base64.workspace = true
reqwest.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
