[package]
name = "bb-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Command-line interface for BB-Agent."
publish = false

[[bin]]
name = "bb"
path = "src/main.rs"

[[bin]]
name = "bb-dev"
path = "src/main.rs"

[dependencies]
bb-core.workspace = true
bb-session.workspace = true
bb-tools.workspace = true
bb-provider.workspace = true
bb-hooks.workspace = true
bb-plugin-host.workspace = true
bb-tui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
async-trait = "0.1"
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
chrono.workspace = true
rusqlite.workspace = true
tokio-util.workspace = true
crossterm = "0.28"
url = "2"
sha2 = { workspace = true }
glob = "0.3"
rand.workspace = true
base64.workspace = true
reqwest.workspace = true
uuid.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile = "3"
