[package]
name = "bb-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Core agent, session, and runtime types for BB-Agent."
documentation = "https://docs.rs/bb-core"
keywords = ["agent", "llm", "coding", "automation", "bb-agent"]
categories = ["development-tools", "asynchronous"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
