[package]
name = "bb-session"
version.workspace = true
edition.workspace = true

[dependencies]
bb-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3"
