[package]
name = "bb-tools"
version.workspace = true
edition.workspace = true

[dependencies]
bb-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "fs", "time"] }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
regex.workspace = true
similar.workspace = true
tokio-util.workspace = true
async-trait = "0.1"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
