[package]
name = "bb-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Builtin tool implementations for BB-Agent."
documentation = "https://docs.rs/bb-tools"
keywords = ["agent", "tools", "automation", "cli", "bb-agent"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
bb-core.workspace = true
bb-provider.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "fs", "time"] }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
regex.workspace = true
similar.workspace = true
tokio-util.workspace = true
async-trait = "0.1"
base64 = "0.22"
reqwest.workspace = true
libc = "0.2"
futures.workspace = true

[dev-dependencies]
tempfile = "3"
