[package]
name = "bb-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Terminal UI components and TUI experience for BB-Agent."
publish = false

[dependencies]
bb-core.workspace = true
bb-session.workspace = true
bb-hooks.workspace = true
bb-provider.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
crossterm = "0.28"
unicode-width = "0.2"
unicode-segmentation = "1.11"
pulldown-cmark = "0.12"
rand.workspace = true
regex.workspace = true
url = "2"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "html", "regex-onig"] }

[dev-dependencies]
tempfile = "3"
